add latest packages, add some todos, change how to get info about logged user

--- a/package.json
+++ b/package.json
@@ -1,24 +1,24 @@
 {
   "name"         : "Boilerplate",
-  "version"      : "0.0.0",
+  "version"      : "1.0.1",
   "description"  : "This is a basic boilerplate for a Single Page Application.",
   "main"         : "server.js",
   "author"       : "NicolaFerracin",
   "dependencies" : {
-    "passport" : "latest",
-    "passport-local" : "latest",
-    "express"         : "latest",
-    "mongoose"        : "latest",
-    "morgan"          : "latest",
-    "body-parser"     : "latest",
-    "method-override" : "latest",
-    "connect-flash" : "latest",
-    "bcrypt-nodejs" : "latest",
-    "express-session": "latest",
-    "cookie-parser": "latest"
+    "passport" : "0.3.2",
+    "passport-local" : "1.0.0",
+    "express"         : "4.13.3",
+    "mongoose"        : "4.3.6",
+    "morgan"          : "1.6.1",
+    "body-parser"     : "1.14.2",
+    "method-override" : "2.3.5",
+    "connect-flash" : "0.1.1",
+    "bcrypt-nodejs" : "0.0.3",
+    "express-session": "1.13.0",
+    "cookie-parser": "1.4.1"
   },
   "engines": {
-    "npm" : "latest"
+    "npm" : "3.5.3"
   },
   "scripts": {
     "start": "node server.js"
